Image is no longer flat on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ footer {
 }
 .imgCircle {
   width: 250px;
+  height: 250px;
   margin-top: 30px;
   border-radius: 100%;
   border: 5px solid #000000;
